[1.20.11]
- Fix tag duration report